some change html

--- a/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
+++ b/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
@@ -11,9 +11,9 @@
 else
 {
     <div class="table-container">
-        <center> <b><p>Most Inzet By Users</p></b></center>
+        <center><p>Most Inzet By Users</p></center>
         <table class="table">
-            
+           
 
             <thead>
                 <tr>
@@ -55,6 +55,7 @@ else
         margin-left: auto; /* Align to the right side */
         margin-right: 0; /* No right margin */
         overflow-x: auto; /* Allow horizontal scrolling if needed */
+        border:solid black 1px;
     }
 
     .table {
