--- a/ArsaRExCH/Components/MyComponents/Win.razor
+++ b/ArsaRExCH/Components/MyComponents/Win.razor
@@ -35,7 +35,7 @@ else if (userTotalWinningAmounts.Count == 0)
 else
 {
     <center><b> <p>Most 10 Winners</p></b></center>
-    <div class="bet-container" style="width:auto">
+    <div class="bet-container" style="width:100%">
         @foreach (var userBet in userTotalWinningAmounts)
         {
             <div class="bet-grid">
