--- a/ArsaRExCH/Components/Pages/AirDrop.razor
+++ b/ArsaRExCH/Components/Pages/AirDrop.razor
@@ -135,7 +135,7 @@
                 }
                 if (dailyClickCount != null)
                 {
-                   // Currentbalance = await _airdropInterface.AirDropDailyClick(user2);
+                    Currentbalance = await _airdropInterface.AirDropDailyClick(user2);
                     await dailyClickCount.FetchBalancesAsync();
                 }
             }
