--- a/ArsaRExCH/Components/AdminComponents/AdminPosts.razor
+++ b/ArsaRExCH/Components/AdminComponents/AdminPosts.razor
@@ -1,7 +1,9 @@
 ﻿@page "/AdminPost"
 @inject NavigationManager NavigationManager
 @inject ArsaRExCH.Interface.PostNadReplyInterface _interface
-@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject ArsaRExCH.Interface.AdministrationInterface _adminInterface
+
+@inject AuthenticationStateProvider _AuthenticationStateProvider
 @using ArsaRExCH.Model
 @using ArsaRExCH.Components.Pages
 @using ArsaRExCH.Components.MyComponents
@@ -9,20 +11,26 @@
 @rendermode InteractiveServer
 <h3>Create New Post</h3>
 
-<div class="post-form">
-    <div class="form-group">
-        <label for="postTitle">Post Title</label>
-        <input type="text" id="postTitle" class="form-control" @bind="newPost.Title" />
+@if (isAdmin)
+{
+    <div class="post-form">
+        <div class="form-group">
+            <label for="postTitle">Post Title</label>
+            <input type="text" id="postTitle" class="form-control" @bind="newPost.Title" />
+        </div>
+
+        <div class="form-group">
+            <label for="postContent">Post Content</label>
+            <textarea id="postContent" class="form-control" @bind="newPost.Content"></textarea>
+        </div>
+
+        <button class="btn btn-primary" @onclick="SubmitPost">Submit Post</button>
     </div>
-
-    <div class="form-group">
-        <label for="postContent">Post Content</label>
-        <textarea id="postContent" class="form-control" @bind="newPost.Content"></textarea>
-    </div>
-
-    <button class="btn btn-primary" @onclick="SubmitPost">Submit Post</button>
-</div>
-
+}
+else
+{
+    <p>Administration Section</p>
+}
 <p>@message</p>
 <style>
     .post-form {
@@ -48,10 +56,13 @@
 @code {
     private Post newPost = new Post();
     private string message = "";
+    private string user2 { get; set; }
+    private string currentUserRole;
+    private bool isAdmin;
 
     private async Task SubmitPost()
     {
-        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
         var user = authState.User;
 
         // Check if the user is authenticated as admin
@@ -71,6 +82,26 @@
         {
             message = "You are not authorized to create a post.";
         }
+    }
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+
+        var user = authState.User;
+
+        if (user.Identity?.IsAuthenticated ?? false)
+        {
+            // Check if the user is an admin directly here
+
+            user2 = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+            var roles = await _adminInterface.GetUserRolesAsync(user);
+            // var roles = user.FindAll(ClaimTypes.Role).Select(c => c.Value).ToList();
+            isAdmin = roles.Contains("Admin");
+            currentUserRole = roles.FirstOrDefault();
+
+
+        }
+     
     }
 
 }
