--- a/ArsaRExCH/Components/AdminComponents/BannedCountryPanel.razor
+++ b/ArsaRExCH/Components/AdminComponents/BannedCountryPanel.razor
@@ -8,13 +8,12 @@
 @using System.Text.Json
 @inject ArsaRExCH.Interface.AdministrationInterface _adminInterface
 @rendermode InteractiveServer
-@attribute [Authorize(Roles = "Admin")]
 @inject IJSRuntime JSRuntime
 
 
 
 
-
+@if(isAdmin){
 <div class="container">
     <h3 class="text-center mt-4">Manage Banned Countries</h3>
 
@@ -97,8 +96,12 @@
             </table>
         </div>
     }
-</div>
-
+    </div>
+}
+else
+{
+    <p> Admimnistration Section</p>
+}
 <style>
     .form-container {
         width: 80%;
@@ -132,9 +135,28 @@
     private List<BanedCountries> BannedCOuntryList = new List<BanedCountries>();
     private bool isFormVisible = false;
     private bool isFormVisible2 = false;
+    private string user2 { get; set; }
+    private string currentUserRole;
+    private bool isAdmin;
+
     protected override async Task OnInitializedAsync()
     {
-        // BannedCOuntryList = await _adminInterface.GetAllBannedCountriesInDatabase();
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+
+        var user = authState.User;
+
+        if (user.Identity?.IsAuthenticated ?? false)
+        {
+            // Check if the user is an admin directly here
+
+            user2 = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+            var roles = await _adminInterface.GetUserRolesAsync(user);
+            // var roles = user.FindAll(ClaimTypes.Role).Select(c => c.Value).ToList();
+            isAdmin = roles.Contains("Admin");
+            currentUserRole = roles.FirstOrDefault();
+
+
+        }
     }
     private void ToggleForm()
     {
