--- a/ArsaRExCH/Components/Pages/AdminPanel.razor
+++ b/ArsaRExCH/Components/Pages/AdminPanel.razor
@@ -10,6 +10,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject RoleManager<IdentityRole> RoleManager
 @inject UserManager<ApplicationUser> UserManager
+@inject ArsaRExCH.Interface.AdministrationInterface _adminInterface
 
 @if (currentUserRole == "Admin")
 {
@@ -76,10 +77,10 @@ else
         if (user.Identity?.IsAuthenticated ?? false)
         {
             // Check if the user is an admin directly here
-      
+
             user2 = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
-            var roles = await GetUserRolesAsync(user);
-           // var roles = user.FindAll(ClaimTypes.Role).Select(c => c.Value).ToList();
+            var roles = await _adminInterface.GetUserRolesAsync(user);
+            // var roles = user.FindAll(ClaimTypes.Role).Select(c => c.Value).ToList();
             isAdmin = roles.Contains("Admin");
             currentUserRole = roles.FirstOrDefault();
 
@@ -90,26 +91,7 @@ else
             Console.WriteLine($"Div {i}: Name = {divNames[i]}, Link = {links[i]}");//debug
         }
     }
-    private async Task<List<string>> GetUserRolesAsync(ClaimsPrincipal user)
-    {
-        var userId = user.FindFirst(ClaimTypes.NameIdentifier)?.Value;
 
-        if (userId == null)
-        {
-            return new List<string>(); // User is not authenticated
-        }
-
-        // Find the user using UserManager
-        var appUser = await UserManager.FindByIdAsync(userId);
-        if (appUser == null)
-        {
-            return new List<string>(); // User not found
-        }
-
-        // Get roles for the user
-        var roles = await UserManager.GetRolesAsync(appUser);
-        return roles.ToList();
-    }
 
 
 
