--- a/ArsaRExCH/Components/Pages/BitcoinPoolOne.razor
+++ b/ArsaRExCH/Components/Pages/BitcoinPoolOne.razor
@@ -8,7 +8,7 @@
 @using ArsaRExCH.Components.Pages
 @using ArsaRExCH.Components.MyComponents
 
-
+<ArsaRExCH.Components.AdminComponents.BitcoinPool1Admin></ArsaRExCH.Components.AdminComponents.BitcoinPool1Admin>
 @code {
 
 }
